# tsil

./: .gitignore  CMakeLists.txt  README.md  ascii.ц  build.sh  comp.sh  ext.c  main.cpp  mainold.cpp  obj.ll  raylib-5.0_linux_amd64.tar.gz.1  test-wasm.js  test.c  test.sh  w.cpp  x  x.c  x.ts  x2.ll  xx.c  xx.ll  Контрибуторам  Кузня  Ліцензія  Право  ФайлиВипуску  ФайлиКомпіляції  друк.cpp  початок.ц  привіт  привіт.ll  привіт.ц  старт.ц  старт.ю8.ц  тест  тест.ll  тест.ц  тест.ю8.ц  юнікод.в  інструкція_llvm.cpp
.плавлення-new2/скомпільоване/: Обʼєкт.ц.ll  Обʼєкт.ц.ll.changed_at  ОбʼєктГрупиДій.ц.ll  ОбʼєктГрупиДій.ц.ll.changed_at  ОбʼєктДії.ц.ll  ОбʼєктДії.ц.ll.changed_at  ОбʼєктЗначення.ц.ll  ОбʼєктЗначення.ц.ll.changed_at  ОбʼєктНезавантаженогоЗначення.ц.ll  ОбʼєктНезавантаженогоЗначення.ц.ll.changed_at  ОбʼєктСекції.ц.ll  ОбʼєктСирогоЗначення.ц.ll  ОбʼєктТипу.ц.ll  ОбʼєктТипу.ц.ll.changed_at  ОбʼєктШаблону.ц.ll  Помилка.ц.ll  Середовище.ц.ll  Середовище.ц.ll.changed_at  Тип.ц.ll  Тип.ц.ll.changed_at  Ц.ц.ll  Ц.ц.ll.changed_at  біб.ц.ll  біб.ц.ll.changed_at
compiler/: Compiler.cpp  CompilerError.cpp  Scope.cpp  Type.cpp  compiler.cpp  compiler.h  tk.cpp  tk.h  x.cpp  x.h
compiler/Scope/: access.cpp  as.cpp  binary.cpp  call.cpp  construct.cpp  diia.cpp  get.cpp  identifier.cpp  number.cpp  section.cpp  set.cpp  string.cpp  synonym.cpp  type.cpp
compiler/nodes/: compileAs.cpp  compileAssign.cpp  compileBinary.cpp  compileCall.cpp  compileConstruct.cpp  compileDefine.cpp  compileDiia.cpp  compileGep.cpp  compileGet.cpp  compileGetGep.cpp  compileLoad.cpp  compileNumber.cpp  compileSet.cpp  compileSizeof.cpp  compileString.cpp  compileStructure.cpp  compileValue.cpp  compile_as_node.cpp  compile_assign_node.cpp  compile_ast_value.cpp  compile_binary_node.cpp  compile_call_node.cpp  compile_constructor_node.cpp  compile_define_node.cpp  compile_diia_node.cpp  compile_get_node.cpp  compile_get_pointer_node.cpp  compile_identifier_node.cpp  compile_number_node.cpp  compile_set_node.cpp  compile_sizeof_node.cpp  compile_string_node.cpp  compile_structure_node.cpp
compiler/tk/: Compiler.cpp  CompilerError.cpp  Scope.cpp  Type.cpp  tk.cpp  tk.h
neo/: CMakeLists.txt  compiler.cpp  compiler.h  main.cpp  xl.cpp  xl.h  Л.в  Ц.в  Ц.ц  лл.в  розбирач.в
neo/parser/: parser.cpp  parser.h  visitor.cpp  розбирач.h
neo/parser/syntax/: CMakeLists.txt  TsilLexer.g4  TsilParser.g4
neo/parser/syntax/source/: TsilLexer.cpp  TsilLexer.interp  TsilParser.cpp  TsilParser.h  TsilParser.interp  TsilParserBaseListener.cpp  TsilParserBaseListener.h  TsilParserBaseVisitor.h  TsilParserListener.h  TsilParserVisitor.h
neo/xl/: CMakeLists.txt  xl.cpp  xl.h
old/: CMakeLists.txt
old/compiler/: Scope.cpp  tk.cpp
old/parser/: ast.h  parser.h
old/parser/syntax/: CMakeLists.txt  TsilLexer.tokens  TsilParser.cpp  TsilParser.g4  TsilParser.h  TsilParser.interp  TsilParserBaseVisitor.h  TsilParserListener.cpp  TsilParserVisitor.cpp
old/бібліотека/: збудувати.sh
parser/: CMakeLists.txt  ast.h  main.cpp  parser.cpp  parser.h  tools.cpp  tools.h
parser/syntax/: TsilLexer.cpp  TsilLexer.g4  TsilLexer.h  TsilLexer.interp  TsilLexer.tokens  TsilParser.cpp  TsilParser.g4  TsilParser.h  TsilParser.interp  TsilParser.tokens  TsilParserBaseListener.h  TsilParserBaseVisitor.h  TsilParserListener.h  TsilParserVisitor.h
parser/visitor/: visitArgs.cpp  visitArithmetic.cpp  visitBitwise.cpp  visitBitwise_not.cpp  visitBody.cpp  visitCall.cpp  visitComparison.cpp  visitConstructor.cpp  visitDefine.cpp  visitDiia.cpp  visitFile.cpp  visitGet.cpp  visitIdentifier.cpp  visitIf.cpp  visitLogical.cpp  visitNegative.cpp  visitNested.cpp  visitNumber.cpp  visitParams.cpp  visitPositive.cpp  visitProgram.cpp  visitSection.cpp  visitSet.cpp  visitSizeof.cpp  visitString.cpp  visitStructure.cpp  visitSynonym.cpp  visitTake.cpp  visitType.cpp  visitValue_atom.cpp
scripts/: build.sh  build_lib.sh  release.sh
БЦ/: bib.c  turbo.c  КД.ц
БЦ/визначення/: Виділяч.в.ц  Друк.в.ц  КД.в.ц  Кодування.в.ц  Накопичувач.в.ц  Реєстр.в.ц  турбо.в.ц  цілеспрямовано.в.ц
КД/: КД.ю8.в  КД.ю8.ц
КЦ/: LLVM.в  LLVM.ю8.в  ВзятіФайли.ц  ВзятіФайли.ю8.ц  ГотовіАргументиШаблону.ц  ГотовіАргументиШаблону.ю8.ц  КЦ.в.ц  КЦ.ц  КЦ.ю8.в  КЦ.ю8.ц  Компілятор.ц  Компілятор.ю8.ц  Крок.ю8.ц  Кроки.ц  Кроки.ю8.ц  Л.в  Назва.ц  Назва.ю8.ц  Обʼєкт.ц  Обʼєкт.ю8.ц  ОбʼєктГрупиДій.ц  ОбʼєктДії.ц  ОбʼєктДії.ю8.ц  ОбʼєктЗначення.ц  ОбʼєктЗначення.ю8.ц  ОбʼєктНезавантаженогоЗначення.ц  ОбʼєктНезавантаженогоЗначення.ю8.ц  ОбʼєктСекції.ц  ОбʼєктСекції.ю8.ц  ОбʼєктСирогоЗначення.ц  ОбʼєктСирогоЗначення.ю8.ц  ОбʼєктСирогоЧисла.ц  ОбʼєктТипу.ц  ОбʼєктТипу.ю8.ц  ОбʼєктШаблону.ц  ОбʼєктШаблону.ю8.ц  Параметр.ц  Параметр.ю8.ц  Параметри.ц  Параметри.ю8.ц  (+26 more)
КЦ/К/: К.в  К.ц  КЄ.ц  КВернути.ц  КВернути.ю8.ц  КВзяти.ц  КВиконати.ц  КВиконати.ю8.ц  КВиконатиШаблон.ц  КДія.ц  КЗвернутись.ц  КЗмінити.ц  КЗмінитиВСекції.ц  КЗмінитиВСекції.ю8.ц  КЗмінитиЗаПозицією.ц  КЗмінитиЗаПозицією.ю8.ц  КЗначенняОбʼєкт.ц  КЗначенняТекст.ц  КЗначенняЧисло.ц  КЗначенняЯкщо.ц  КОбʼєкт.ц  КОперація.ц  КОперація.ю8.ц  КОтримати.ц  КОтримати.ю8.ц  КОтриматиЗаПозицією.ц  КОтриматиЗіСекції.ц  КПеревизначити.ц  КПерезаписати.ц  КПерелік.ц  КПерелік.ю8.ц  КПоки.ц  КПоки.ю8.ц  КСамоОперація.ц  КСамоОперація.ю8.ц  КСекція.ц  КСекція.ю8.ц  КСинонім.ц  (+20 more)
ЛЛВМ/: LLVM.cpp  ЛЛВМ.в.ц
МаМа/: МаМа.в  МаМа.ц
ПМ/: ПМ.в.ц  ПМ.ец  ПМ.ц  ПМ.ю8.в  ПМ.ю8.ц  ПМ2.ц  ПМ2.ю8.ц  ПМЛЛВМ.ц  привіт.п  привіт.пм
ПМЛЛВМ/: ПМЛЛВМ.в.ц  ПМЛЛВМ.ц
біб/: bib.c  Друк.ю8.в  Кодування.ю8.в  Накопичувач.ю8.в  Реєстр.ю8.в  цілеспрямовано.ю8.в
бібліотека/: збудувати.sh  юнікод.в
друк/: друк.cpp  друк.в
команди/: команди.в.ц  ціль_версія.ц  ціль_допомога.ц  ціль_кдвю.ц  ціль_перетворити.ц  ціль_скомпілювати.ц  ціль_ювкд.ц
розбирач/: rkc.cpp  ркц  ркц.ц  тест2.ц  ціль.sh
різне/: undecode_unicode_ll_files.js
скрипти/: випуск.sh  збудувати.sh  збудувати_neo.sh  збудувати_КЦ.sh  збудувати_випуск.sh  збудувати_стару_ціль.sh  приготувати_llvm.sh
тестування/: тестувати.sh
цілеспрямовано/: цілеспрямовано.в
(+179 files in other folders)
